Fixed minor bug on mobile

--- a/src/app/weatherforecast/weatherforecast.component.scss
+++ b/src/app/weatherforecast/weatherforecast.component.scss
@@ -71,10 +71,18 @@ path:hover {
           display: flex;
           font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
           font-size: 1rem;
+
+          @media (max-width: $desktop) {
+            font-size: 0.6rem;
+          }
         }
 
         img {
           display: block;
+
+          @media (max-width: $desktop) {
+            width: 35px;
+          }
         }
       }
     }
